[gd_scene load_steps=10 format=3 uid="uid://5xxet7d3hwvm"]

[ext_resource type="Script" path="res://Scenes/Instanced Objects/NPCS/Enemies/enemy.gd" id="1_510pu"]
[ext_resource type="Script" path="res://Scripts/States/stateMachine.gd" id="2_bkagx"]
[ext_resource type="Script" path="res://Scripts/States/enemyIdle.gd" id="2_hv3h0"]
[ext_resource type="Texture2D" uid="uid://c0kfxea2bhx0c" path="res://Assets/Sprites/itemSlot.png" id="3_e56hi"]
[ext_resource type="Script" path="res://Scripts/States/enemyChase.gd" id="5_y4svp"]
[ext_resource type="Script" path="res://Scripts/States/EnemySearch.gd" id="6_s3wjm"]
[ext_resource type="Script" path="res://Scripts/States/EnemyAttack.gd" id="7_fo5vo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yuyo7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_td74n"]
size = Vector2(16, 8)

[node name="Enemy" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_510pu")

[node name="Sprite" type="AnimatedSprite2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_yuyo7")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
scale = Vector2(1.02355, 1.05876)
shape = SubResource("RectangleShape2D_td74n")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
scale = Vector2(1.02355, 1.05876)
shape = SubResource("RectangleShape2D_td74n")
debug_color = Color(0.952941, 0.203922, 0.219608, 0.419608)

[node name="Debug Hurtbox Sprite" type="Sprite2D" parent="Hurtbox"]
visible = false
scale = Vector2(0.125, 0.125)
texture = ExtResource("3_e56hi")

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initialState")]
script = ExtResource("2_bkagx")
initialState = NodePath("EnemyIdle")

[node name="EnemyIdle" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy", "sightCone")]
script = ExtResource("2_hv3h0")
enemy = NodePath("../..")
sightCone = NodePath("../../SightCone")

[node name="EnemyChase" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_y4svp")
enemy = NodePath("../..")

[node name="EnemySearch" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("6_s3wjm")
enemy = NodePath("../..")

[node name="EnemyAttack" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy", "hurtbox")]
script = ExtResource("7_fo5vo")
enemy = NodePath("../..")
hurtbox = NodePath("../../Hurtbox")

[node name="SightCone" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SightCone"]
polygon = PackedVector2Array(128, 64, 128, -64, 0, 0)

[node name="Debug Sight Cone" type="Line2D" parent="SightCone"]
visible = false
points = PackedVector2Array(128, -64, 128, 64, 0, 0, 128, -64)
default_color = Color(0.815686, 0.243137, 0.117647, 1)
